--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-/* style.css */
 
-/* General styles */
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -9,15 +7,20 @@ body {
   .wrapper {
     max-width: 940px;
     margin: 0 auto;
-    padding: 0 20px; /* Add some padding to prevent content from sticking to the edges */
+    padding: 0 20px; 
   }
+
+  img  {
+    width:100%;
+}
   
-  /* Header styles */
+
   header {
     background-color: #000;
     color: #fff;
     padding: 20px 0;
   }
+  
   
   header .wrapper {
     display: flex;
@@ -25,42 +28,68 @@ body {
     align-items: center;
   }
   
-  header nav ul {
-    list-style: none;
-    padding: 0;
+
+  header ul {
     display: flex;
+    list-style: none;
+}
+
+  header ul li a:link,
+  header ul li a:visited {
+    display: inline-block;
+    padding: 0.5em 0.5em;
+    background-color: #000;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+  header ul li a:hover,
+  header ul li a:focus {
+    display: inline-block;
+    background-color: #ffffff;
+    color: #000;
+    text-decoration: none;
+}
+
+  header ul li:nth-child(3) {
+    margin-right: 50px;
+}
+
+  .nav-link {
+    color: #fff; 
   }
   
-  header nav ul li {
-    margin-right: 20px;
-  }
   
-  /* Hero section styles */
   #hero {
     height: 600px;
-    background-image: url(images/hero-background.jpg); /* Replace with your actual image */
-    background-size: cover;
-    background-position: center;
+    background-image: url(/images/hands-typing.jpg);
     filter: grayscale(70%);
+    background-position: center;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  #hero h1 {
+}
+
+  h1 {
     max-width: 60%;
+    background-color: #000;
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 20px;
+    color: #fff;
+    text-shadow: 2px 2px #000;
+    padding: 30px;
     text-align: center;
-    text-shadow: 2px 2px 4px #000;
-  }
+    font-size: 3rem;
+}
   
-  /* About Me section styles */
+
   #about-me {
     padding: 50px 0;
+   
   }
   
   #about-me .wrapper {
+   
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
@@ -70,51 +99,57 @@ body {
     width: 100%;
   }
   
-  /* Services section styles */
+ 
   #services {
     background-color: #fafafa;
-    padding: 50px 0;
-  }
-  
-  #services .wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+
   #services h2 {
-    max-width: 80%;
     text-align: center;
-  }
-  
-  #services div {
+    max-width: 100%;
+    font-size: 2rem;
+}
+
+  .servicegrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-  }
-  
-  #services article {
+    justify-content: space-between;
+}
+
+  .servicegrid h3 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+  .servicegrid article {
     display: flex;
     flex-direction: column;
-    align-items: center;
-  }
-  
-  #services article a.btn {
+    background-color: #fff;
+    align-items: flex-start;
+    padding-left: 15px;
+    padding-bottom: 20px;
+    padding-right: 20px;
+}
+
+  .btn {
     margin-top: auto;
-    padding: 10px 20px;
     background-color: #000;
+    padding: 15px;
     color: #fff;
     text-decoration: none;
-    border: 2px solid #000;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  #services article a.btn:hover {
-    background-color: #fff;
+}
+
+  .btn:hover {
     color: #000;
-  }
+    background-color: #fff;
+    border: 3px solid #000;
+}
   
-  /* My Work section styles */
+  
   #work {
     padding: 50px 0;
   }
@@ -127,8 +162,41 @@ body {
     width: 100%;
     margin-bottom: 20px;
   }
+
+
+  #work div div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding-bottom: 40px;
+  }
+
+  #work div div img:nth-child(1){
+    grid-column: 1 / 4;
+    grid-row: 1;
+  }
+
+  #work div div img:nth-child(2){
+    grid-column: 4 / 7;
+    grid-row: 1;
+  }
+
+  #work div div img:nth-child(3){
+    grid-column: 1 / 3;
+    grid-row: 2;
+  }
+
+  #work div div img:nth-child(4){
+    grid-column: 3 / 5;
+    grid-row: 2;
+  }
+
+  #work div div img:nth-child(5){
+    grid-column: 5 / 7;
+    grid-row: 2;
+  }
   
-  /* Footer styles */
+  
   footer {
     background-color: #000;
     color: #fff;
